# fyreplace-api

./: .docker-dependencies-debian.sh  .docker-venv.sh  .dockerignore  .env-example  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.in  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: scanning.yml  shipping.yml  validation.yml
core/: admin.py  apps.py  authentication.py  celery.py  emails.py  exceptions.py  grpc.py  interceptors.py  jwt.py  lookups.py  mixins.py  models.py  pagination.py  permissions.py  routers.py  serializers.py  services.py  signals.py  storages.py  tasks.py  tests.py  urls.py  utils.py  validators.py  views.py  viewsets.py
core/management/commands/: format.py  make_requirements.py
core/migrations/: 0001_initial.py  0002_alter_cachedrequest_serialized_response_and_more.py
core/settings/: __init__.py  compat.py  testing.py
flags/: admin.py  apps.py  models.py  serializers.py  signals.py  views.py
flags/migrations/: 0001_initial.py
kubernetes/: .gitignore  fyreplace.yml
kubernetes/fyreplace/: .helmignore  Chart.template.yaml  Chart.yaml  values.yaml
kubernetes/fyreplace/templates/: _helpers.tpl  certificates.yaml  certificates.yml  roles.yml  (+8 more)
notifications/: apps.py  models.py  pagination.py  serializers.py  services.py  signals.py  tasks.py  test_models.py  test_services.py  test_views.py  tests.py  urls.py  views.py
notifications/migrations/: 0001_initial.py  0002_countunit_notification.py  0003_alter_notification_recipient.py  0004_clear_notification.py  0005_flag_alter_notification_unique_together_and_more.py  0006_apnstoken_remotemessaging.py  0007_alter_id.py  0101_squashed.py
notifications/remote/: __init__.py  apns.py  fcm.py
posts/: admin.py  apps.py  mixins.py  models.py  pagination.py  permissions.py  serializers.py  services.py  signals.py  tasks.py  test_models.py  test_services.py  test_tasks.py  test_views.py  tests.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_initial.py  0003_alter_chapter_post_alter_comment_post_and_more.py  0004_alter_chapter_text_alter_comment_text.py  0005_alter_comment_text.py  0006_subscription_date_last_seen.py  0007_alter_id.py  0101_squashed.py
requirements/: base.in  base.txt  with-mysql.txt  with-postgresql.txt  with-sqlite.txt
users/: admin.py  apps.py  authentication.py  emails.py  models.py  pagination.py  permissions.py  reserved-usernames.txt  serializers.py  services.py  signals.py  tasks.py  test_models.py  test_services.py  test_tasks.py  test_views.py  tests.py  urls.py  validators.py  views.py
users/migrations/: 0001_initial.py  0002_initial.py  0003_remove_user_password.py  0004_user_connection_token.py  0005_user_password.py  0006_alter_connection_user_alter_user_blocked_users.py  0007_alter_user_bio.py  0008_alter_user_bio_alter_user_username.py  0009_alter_id.py  0101_squashed.py
users/templates/: _attributes.mjml  _link_end_notice.mjml  _logo.mjml  _qr_code.mjml  account_activation.html  account_activation.html.mjml  account_activation.txt  account_connection.html  account_connection.html.mjml  account_connection.txt  account_recovery.html  account_recovery.html.mjml  account_recovery.txt  user_activation.txt  user_banned.html  user_banned.html.mjml  user_banned.txt  user_email_update.html  user_email_update.html.mjml  user_email_update.txt  user_recovery.txt
(+4 files in other folders)
