[tool.poetry]
name = "fyreplace-api"
version = "0.0.0"
description = "Fyreplace API"
authors = []
license = "AGPL-3.0-or-later"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
black = "~24.10"
boto3 = "~1.35"
celery = {extras = ["redis"], version = "~5.4"}
django = {extras = ["argon2"], version = "~5.1"}
django-anymail = {extras = ["mailgun"], version = "~12.0"}
django-celery-beat = "~2.7"
django-extensions = "~3.2"
django-storages = {extras = ["boto3"], version = "~1.14"}
django-stubs = "~5.1"
email-validator = "~2.2"
firebase-admin = "~6.6"
grpcio = "~1.68"
grpcio-tools = "~1.68"
grpc-interceptor = "~0.15"
httpx = {extras = ["http2"], version = "~0.28"}
ipython = "~8.30"
isort = "~5.13"
mysqlclient = "~2.2"
pillow = "~11.0"
psycopg = "~3.2"
pyjwt = {extras = ["crypto"], version = "~2.10"}
pytest-xdist = {extras = ["psutil"], version = "~3.6"}
pytest-django = "~4.9"
python = "~3.13"
python-dotenv = "~1.0"
python-magic = "~0.4"
qrcode = "~8.0"
requests = "~2.32"
rollbar = "~1.1"
tqdm = "~4.67"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
